# blog-auto-review-by-google-cloud-service

./: README.md
functions/auto-review/: main.py  pyproject.toml  requirements.txt
functions/check-feed/: main.py  pyproject.toml  requirements.txt
infra/: cdktf.json  config.ts  main.ts  package-lock.json  package.json
infra/constructs/: cloud-run-functions.ts
infra/stacks/: blog-auto-review-stack.ts
